pop-up message when add product to cart

--- a/apps/cart/templates/cart.html
+++ b/apps/cart/templates/cart.html
@@ -54,7 +54,7 @@
                     <hr>
                 {% endif %}
 
-                <h2 class="title">Contact information</h2>
+                {% comment %} <h2 class="title">Contact information</h2> {% endcomment %}
 
                 {% comment %} <div class="columns">
                     <div class="column is-6">
