--- a/apps/core/templates/product.html
+++ b/apps/core/templates/product.html
@@ -13,7 +13,7 @@
                  {% endfor %}
              </div>
          </div> -->
-         <div class="navbar-item">
+         {% comment %} <div class="navbar-item">
 						<form method="get" action="{% url 'searchManage' %}">
 							<div class="field has-addons">
 								<div class="control">
@@ -24,7 +24,7 @@
 								</div>
 							</div>
 						</form>
-             </div>
+             </div> {% endcomment %}
          <div class = "columns is-multiline" >
             {% for product in products %}
                 <div class="column is-3">
