--- a/apps/store/templates/parts/product_list.html
+++ b/apps/store/templates/parts/product_list.html
@@ -5,7 +5,7 @@
             <div class="card">
                 <div class="card-image">
                     <figure class="image">
-                        <img src="{{ p.get_thumbnail }}">
+                        <img src="{{ p.get_thumbnail }}" style="width: 300px; height: 200px">
                     </figure>
                 </div>
                 
