--- a/apps/core/templates/base.html
+++ b/apps/core/templates/base.html
@@ -9,22 +9,23 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/1.0.0/css/bulma.min.css">
 		<link rel="stylesheet" href="{% static 'main.css' %}">
 		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-pageloader@0.9.0/css/bulma-pageloader.min.css">
+		{% comment %} <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-pageloader@0.9.0/css/bulma-pageloader.min.css"> {% endcomment %}
 		<style>
-			.navbar{
+			{% comment %} .navbar{
 			background-color: #F99A52
-			}
+			} {% endcomment %}
 			body{
 			background-color: #f2efda
 			}
 
-
 		</style>
+		<script type="module" src="fortawesome.js"></script>
+
 	</head>
 
 	<body>
 	 <div id="content" style="font-size: 16px;">
-		<nav class="navbar" id="navbarapp">
+		<nav class="navbar is-light" id="navbarapp">
 			<div class="navbar-brand">
 				<a class="navbar-item" href="{% url 'frontpage' %}">{% trans 'E-shop' %}</a>
 
@@ -44,7 +45,7 @@
 									<input type="text" class="input" placeholder="Search..." name="query">
 								</div>
 								<div class="control">
-									<button class="button is-success">{% trans 'Search' %}</button>
+									<button class="button is-danger">{% trans 'Search' %}</button>
 								</div>
 							</div>
 						</form>
@@ -65,9 +66,9 @@
 					
 					<div class="navbar-item">
 						{% if request.user.is_authenticated %}
-							<a href="{% url 'cart' %}" class="button is-primary">{% trans 'Cart' %} ([[ numItems ]])</a>
+							<a href="{% url 'cart' %}" class="button is-primary is-rounded">{% trans 'Cart' %} ([[ numItems ]])</a>
 						{% else %}
-							<a href="{% url 'login' %}" class="button is-primary">{% trans 'Cart' %} ([[ numItems ]])</a>
+							<a href="{% url 'login' %}" class="button is-primary is-rounded">{% trans 'Cart' %} ([[ numItems ]])</a>
 						{% endif %}
 					</div>
 
@@ -79,7 +80,7 @@
 						<div class="navbar-item">
 							<div class="buttons">
 								<a href="{% url 'signup' %}" class="button is-primary"><strong>{% trans 'Sign up' %}</strong></a>
-								<a href="{% url 'login' %}" class="button is-light">{% trans 'Log in' %}</a>
+								<a href="{% url 'login' %}" class="button is-white">{% trans 'Log in' %}</a>
 							</div>
 						</div>
 					{% endif %}
