--- a/apps/core/templates/base.html
+++ b/apps/core/templates/base.html
@@ -27,7 +27,7 @@
 	 <div id="content" style="font-size: 16px;">
 		<nav class="navbar is-light" id="navbarapp">
 			<div class="navbar-brand">
-				<a class="navbar-item" href="{% url 'frontpage' %}">{% trans 'E-shop' %}</a>
+				<a class="navbar-item" href="{% url 'frontpage' %}" data-translate="{% trans 'E-shop' %}">{% trans 'E-shop' %}</a>
 
 				<a @click="toggleMenu()" role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="main-navbar">
 					<span aria-hidden="true"></span>
@@ -45,7 +45,7 @@
 									<input type="text" class="input" placeholder="Search..." name="query">
 								</div>
 								<div class="control">
-									<button class="button is-danger">{% trans 'Search' %}</button>
+									<button class="button is-danger" data-translate="{% trans 'Search' %}">{% trans 'Search' %}</button>
 								</div>
 							</div>
 						</form>
@@ -54,7 +54,7 @@
 				
 				<div class="navbar-end">
 					<div class="navbar-item has-dropdown is-hoverable">
-						<a href="#" class="navbar-link">{% trans 'Categories' %}</a>
+						<a href="#" class="navbar-link" data-translate="{% trans 'Categories' %}">{% trans 'Categories' %}</a>
 						<div class="navbar-dropdown">
 						  <div class="category-table">
 							{% for category in menu_categories %}
@@ -66,21 +66,21 @@
 					
 					<div class="navbar-item">
 						{% if request.user.is_authenticated %}
-							<a href="{% url 'cart' %}" class="button is-primary is-rounded">{% trans 'Cart' %} ([[ numItems ]])</a>
+							<a href="{% url 'cart' %}" class="button is-primary is-rounded" data-translate="{% trans 'Cart' %}">{% trans 'Cart' %} ([[ numItems ]])</a>
 						{% else %}
-							<a href="{% url 'login' %}" class="button is-primary is-rounded">{% trans 'Cart' %} ([[ numItems ]])</a>
+							<a href="{% url 'login' %}" class="button is-primary is-rounded" data-translate="{% trans 'Cart' %}">{% trans 'Cart' %} ([[ numItems ]])</a>
 						{% endif %}
 					</div>
 
 					{% if request.user.is_authenticated %}
 						<div class="navbar-item">
-							<a href="{% url 'myaccount' %}" class="button is-light">{% trans 'My account' %}</a>
+							<a href="{% url 'myaccount' %}" class="button is-white" data-translate="{% trans 'My account' %}">{% trans 'My account' %}</a>
 						</div>
 					{% else %}
 						<div class="navbar-item">
 							<div class="buttons">
-								<a href="{% url 'signup' %}" class="button is-primary"><strong>{% trans 'Sign up' %}</strong></a>
-								<a href="{% url 'login' %}" class="button is-white">{% trans 'Log in' %}</a>
+								<a href="{% url 'signup' %}" class="button is-primary" data-translate="{% trans 'Sign up' %}"><strong>{% trans 'Sign up' %}</strong></a>
+								<a href="{% url 'login' %}" class="button is-white" data-translate="{% trans 'Log in' %}">{% trans 'Log in' %}</a>
 							</div>
 						</div>
 					{% endif %}
@@ -91,7 +91,7 @@
 
 		<div style="display: flex; justify-content: space-between; align-items: center; margin-right: 10px; margin-left: 10px;">
 			<div style="text-align: left;">
-			  <span style="display: inline-block; vertical-align: middle; line-height: 40px; margin-right: 10px;">Please choose the font size:</span>
+			  <span style="display: inline-block; vertical-align: middle; line-height: 40px; margin-right: 10px;" data-translate="{% trans 'Please choose the font size' %}">{% trans 'Please choose the font size' %}:</span>
 			  <button id="small-font" style="vertical-align: middle; line-height: 40px;">小</button>
 			  <button id="medium-font" style="vertical-align: middle; line-height: 40px;">中</button>
 			  <button id="large-font" style="vertical-align: middle; line-height: 40px;">大</button>
@@ -111,12 +111,12 @@
 				<option value="custom">Custom</option>
 			  </select>
 			  <input type="text" id="custom-font-size" style="display: none; width: auto; margin-left: 10px; vertical-align: middle; line-height: 20px;" placeholder="Custom size (px)">
-			  <button id="apply-font-size" style="vertical-align: middle; line-height: 20px;" class="button is-info is-light">Apply</button>
+			  <button id="apply-font-size" style="vertical-align: middle; line-height: 20px;" class="button is-info is-light" data-translate="{% trans 'Apply' %}">{% trans 'Apply' %}</button>
 			</div>
 			
 		  
 			<div style="text-align: right;">
-			  <span style="display: inline-block; vertical-align: middle; line-height: 40px; margin-right: 10px;">Please choose your language:</span>
+			  <span style="display: inline-block; vertical-align: middle; line-height: 40px; margin-right: 10px;" data-translate="{% trans 'Please choose your language' %}">{% trans 'Please choose your language' %}:</span>
 			  <form class="form-inline ml-auto" action="{% url 'set_language' %}" method="post" style="float: right;">
 				{% csrf_token %}
 				<div class="select">
@@ -145,11 +145,11 @@
 		{% if products.has_other_pages %}
     	<nav class="pagination is-centered" role="navigation" aria-label="pagination">
         	{% if products.has_previous %}
-            	<a href="?page=1" class="pagination-previous">{% trans 'First' %}</a>
-            	<a href="?page={{ products.previous_page_number }}" class="pagination-previous">{% trans 'Previous' %}</a>
+            	<a href="?page=1" class="pagination-previous" data-translate="{% trans 'First' %}">{% trans 'First' %}</a>
+            	<a href="?page={{ products.previous_page_number }}" class="pagination-previous" data-translate="{% trans 'Previous' %}">{% trans 'Previous' %}</a>
         	{% else %}
-            	<a class="pagination-previous" disabled>{% trans 'First' %}</a>
-            	<a class="pagination-previous" disabled>{% trans 'Previous' %}</a>
+            	<a class="pagination-previous" disabled data-translate="{% trans 'First' %}">{% trans 'First' %}</a>
+            	<a class="pagination-previous" disabled data-translate="{% trans 'Previous' %}">{% trans 'Previous' %}</a>
         	{% endif %}
 
         	<ul class="pagination-list">
@@ -167,11 +167,11 @@
         	</ul>
 
         	{% if products.has_next %}
-            	<a href="?page={{ products.next_page_number }}" class="pagination-next">{% trans 'Next' %}</a>
-            	<a href="?page={{ products.paginator.num_pages }}" class="pagination-next">{% trans 'Last' %}</a>
+            	<a href="?page={{ products.next_page_number }}" class="pagination-next" data-translate="{% trans 'Next' %}">{% trans 'Next' %}</a>
+            	<a href="?page={{ products.paginator.num_pages }}" class="pagination-next" data-translate="{% trans 'Last' %}">{% trans 'Last' %}</a>
         	{% else %}
-            	<a class="pagination-next" disabled>{% trans 'Next' %}</a>
-            	<a class="pagination-next" disabled>{% trans 'Last' %}</a>
+            	<a class="pagination-next" disabled data-translate="{% trans 'Next' %}">{% trans 'Next' %}</a>
+            	<a class="pagination-next" disabled data-translate="{% trans 'Last' %}">{% trans 'Last' %}</a>
      		{% endif %}
     	</nav>
 		{% endif %}
@@ -179,12 +179,12 @@
 		<footer class="footer">
 			<div class="columns">
 				<div class="column is-4">
-					<h2 class="subtitle">{% trans 'E-shop' %}</h2>
+					<h2 class="subtitle" data-translate="{% trans 'E-shop' %}">{% trans 'E-shop' %}</h2>
 				</div>
 
 				<div class="column is-8">
-					<a href="{% url 'contact' %}" class="navbar-item">{% trans 'Contact' %}</a>
-					<a href="{% url 'about' %}" class="navbar-item">{% trans 'About' %}</a>
+					<a href="{% url 'contact' %}" class="navbar-item" data-translate="{% trans 'Contact' %}">{% trans 'Contact' %}</a>
+					<a href="{% url 'about' %}" class="navbar-item" data-translate="{% trans 'About' %}">{% trans 'About' %}</a>
 				</div>
 			</div>
 		</footer>
@@ -292,7 +292,29 @@
 					document.getElementById('custom-font-size').style.display = 'none';
 				  }
 				}
-			  });
+			});
+
+    		var elements = document.querySelectorAll('[data-translate]');
+
+    		elements.forEach(function(element) {
+        		var speechReported = false;
+
+        		function handleMouseEnter() {
+            		if (!speechReported) {
+                		var text = element.getAttribute('data-translate');
+                		var speech = new SpeechSynthesisUtterance(text);
+                		speechSynthesis.speak(speech);
+                		speechReported = true;
+            		}
+        		}
+
+        		function handleMouseLeave() {
+            		speechReported = false;
+        		}
+
+        		element.addEventListener('mouseenter', handleMouseEnter);
+        		element.addEventListener('mouseleave', handleMouseLeave);
+    		});
 		</script>
 
 		{% block scripts %}
